[gd_scene load_steps=7 format=3 uid="uid://1udb4y56c6tt"]

[ext_resource type="Texture2D" uid="uid://cyh88vdpy7l0o" path="res://assets/particles/blackSmoke22.png" id="1_4swya"]
[ext_resource type="Script" path="res://scenes/monsters/behaviour.gd" id="1_x0isd"]
[ext_resource type="Texture2D" uid="uid://bg1fgefugcr0" path="res://assets/monsters/ghost.png" id="2_c5k5s"]

[sub_resource type="Animation" id="Animation_7i35c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lq8so"]
resource_name = "phasing"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bro4q"]
_data = {
"RESET": SubResource("Animation_7i35c"),
"phasing": SubResource("Animation_lq8so")
}

[node name="BigMonster" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_x0isd")

[node name="MonsterSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_c5k5s")

[node name="MonsterParticles" type="CPUParticles2D" parent="."]
visible = false
texture = ExtResource("1_4swya")
emission_shape = 1
emission_sphere_radius = 128.0
gravity = Vector2(0, 0)
scale_amount_min = 0.5
scale_amount_max = 0.5
color = Color(1, 1, 1, 0.223529)

[node name="MonsterAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bro4q")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
